2004-09-14  Jerry James  <james@xemacs.org>

	* doprnt.c (emacs_doprnt_1): Change message to msg to eliminate a
	gcc shadow warning.
	* glyphs-gtk.c:
	* glyphs.h:
	Use enum image_instance_type and do not typedef the enum to
	image_instance_type to eliminate a gcc shadow warning.

2004-09-14  Jerry James  <james@xemacs.org>

	* linuxplay.c (linux_play_data_or_file): Fix type punning
	warning.

2004-09-14  Jerry James  <james@xemacs.org>

	* compiler.h: Change definition of RETURN_NOT_REACHED for icc.
	* glyphs-eimage.c (tiff_memory_write): Quiet gcc warning.

2004-09-13  Jerry James  <james@xemacs.org>

	* callproc.c: Really remove.

2004-09-13  Jerry James  <james@xemacs.org>

	* s/windowsnt.h: Define (DECLARE_)DOESNT_RETURN_TYPE instead of
	(DECLARE_)DOESNT_RETURN.
	* buffer.c (nsberror): Mark as noreturn.
	* cmdloop.c (Fcommand_loop_1): Mark as noreturn when
	!LISP_COMMAND_LOOP.
	* cmdloop.c (Freally_early_error_handler): Mark as noreturn.  Use
	RETURN_NOT_REACHED to quash compiler warnings.
	* cmdloop.c (command_loop_3): Ditto.
	* cmdloop.c (command_loop_2): Ditto.
	* cmdloop.c (call_command_loop): Ditto, both versions.
	* cmdloop.c (command_loop_1): Ditto, when !LISP_COMMAND_LOOP.
	* cmdloop.c (Fcommand_loop_1): Ditto, when !LISP_COMMAND_LOOP.
	* commands.h (call_command_loop): Declare as noreturn.
	* compiler.h: Define (DECLARE_)DOESNT_RETURN_TYPE for functions
	with non-void return types.  Use them to define
	(DECLARE_)DOESNT_RETURN.
	* device-x.c (x_IO_error_handler): Use RETURN_NOT_REACHED.
	* emacs.c (Frun_emacs_from_temacs): Mark as noreturn.
	* emacs.c (Fkill_emacs): Ditto.  Use RETURN_NOT_REACHED.
	* eval.c (unwind_to_catch): Declare as noreturn.
	* eval.c (throw_or_bomb_out): Ditto.  Remove comments about
	warnings that will now not be generated.
	* eval.c (Fthrow): Mark as noreturn.  Use RETURN_NOT_REACHED.
	* eval.c (Fsignal): Use RETURN_NOT_REACHED.
	* eval.c (flagged_a_squirmer): Mark as noreturn.  Use
	RETURN_NOT_REACHED.